--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1>My Profile</h1>
+							<p class="major">This is an assignment 01 of Introduction to Information Technology. The world of IT is boundless,limitless and multifarious with various possible career paths in it. This assignment is intended to be the foremost step in the process of choosing the right career path for us. It will help us to dive and explore the world of IT.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
