--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>My Profile</h1>
+							<h1><u>My Profile</u></h1>
 							<p class="major">This is an assignment 01 of 'Introduction to Information Technology'. The world of IT is boundless, limitless and multifarious with various possible career paths in it. This assignment is the foremost step in the process of choosing the right career path for us. It will help us to dive-in and explore the world of IT. Moreover, it will make us question ourselves on 'Why me and IT?'</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -35,7 +35,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Personal Information</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p><b>Name:</b> Divyanshu Chand</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
