--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1><u>My Profile</u></h1>
+							<h1>My Profile</h1>
 							<p class="major">This is an assignment 01 of 'Introduction to Information Technology'. The world of IT is boundless, limitless and multifarious with various possible career paths in it. This assignment is the foremost step in the process of choosing the right career path for us. It will help us to dive-in and explore the world of IT. Moreover, it will make us question ourselves on 'Why me and IT?'</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -35,7 +35,11 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Personal Information</h2>
-							<p><b>Name:</b> Divyanshu Chand</p>
+							<p><ul>
+							<li><b>Name:</b> Divyanshu Chand</li>
+							<li><b>Student number:</b> 3767456</li>
+							<li><b>Email:</b> divyanshu.cnd@gmail.com</li>
+							i ggdshbvjnfkvld.</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
