--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="mypic.jpg" alt="" />
 						</div>
 					</section>
 
