--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>My Profile</h1>
-							<p class="major">This is an assignment 01 of 'Introduction to Information Technology'. The world of IT is boundless, limitless and multifarious with various possible career paths in it. This assignment is the foremost step in the process of choosing the right career path for us. It will help us to dive-in and explore the world of IT. Moreover, it will make us question ourselves on 'Why me and IT?'</p>
+							<p class="major">This is an assignment 01 of 'Introduction to Information Technology'. The world of IT is boundless, limitless and multifarious with various possible career paths in it. This assignment is the foremost step in the process of choosing the right career path for us. It will help us to dive-in and explore the world of IT. Moreover, it will make us think and question ourselves on 'Why me and IT?'</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
