--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li><b>Name:</b> Divyanshu Chand</li>
 							<li><b>Student number:</b> 3767456</li>
 							<li><b>Email:</b> divyanshu.cnd@gmail.com</li>
-							i ggdshbvjnfkvld.</p>
+							I belong from a northern hilly state of India named Uttarakhand. It is also known as 'The Land of Gods'. India is a diverse nation with rich and varied heritage. In 2018, I completed my schooling with a good percentage from Amenity Public School and as a result of which I was awarded with a 'Future Leaders Scholarship' by RMIT University. I would like to describe myself as a voracious reader, an amater photographer, an avid music lover, a creative thinker and a hodophile. I have a keen interest in gadgets and technology. I have a command of Hindi and English. Additionally, I have completed A2.2 level in Spainish from Instituto Cervantes New Delhi.   </p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
