--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 							<p>
 							<dl>
 								<dt><u>What and when?</u></dt>
+								<dt><u>Why RMIT?</u></dt>
+								<dt><u>What do I expect to learn?</u></dt>
 							</dl>	
 							</p>
 							<ul class="actions stacked">
