--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 							<p>
 							<dl>
 								<dt><u>What and when?</u></dt>
+								<dd>IT is a dynamic and everlasting field, the more you get into it, the more you discover. I enjoy keeping up with the latest advances in the broad and ever-changing field of information technology.
 								<dt><u>Why RMIT?</u></dt>
 								<dt><u>What do I expect to learn?</u></dt>
 							</dl>	
