--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 							</dl>	
 							</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">CONTINUE...</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="it.jpg" alt="" />
 						</div>
 					</section>
 
