--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 								<dt><u>What and when?</u></dt>
 								<dd>IT is a dynamic and everlasting field, the more you get into it, the more you discover. I enjoy keeping up with the latest advances in the broad and ever-changing field of information technology. My main interest in IT is computer programming and web designing as both of them rely on creativity and problem-solving skills. IT gives me a pleasure to solve the problems in a creative manner.
 									My interest in computer began when my parents gifted me a personal computer on my 12th birthday. At that time, computer was just a toy and entertainment device for me. With the passage of time, my interest was directed towards its working and how it manages and tranfers huge data in a wireless medium in a matter of seconds. I have a best friend, named Varun, he belongs to electronics and communication field. He is a techie, and shares me almost every knowledge and updates me with the news in the field of technology. Being with him, he made me more aware about the world of technology. He has a great role in my life that sparked my interest. 
-								<dt><u>Why RMIT?</u></dt>
-								<dt><u>What do I expect to learn?</u></dt>
+
 							</dl>	
 							</p>
 							<ul class="actions stacked">
@@ -67,15 +66,20 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="it.jpg" alt="" />
+							<img src="iit.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							
+							<p>
+							<dl>
+								<dt><u>Why RMIT?</u></dt>
+								<dt><u>What do I expect to learn?</u></dt>
+							</dl>	
+							</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
