--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="rmit.jpg" alt="" />
 						</div>
 					</section>
 
