--- a/index.html
+++ b/index.html
@@ -88,8 +88,22 @@
 							<img src="rmit.jpg" alt="" />
 						</div>
 					</section>
+	<!-- Five -->
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<h1>Ideal Job</h1>
+							<p class="major">This is an assignment 01 of 'Introduction to Information Technology'. The world of IT is boundless, limitless and multifarious with various possible career paths in it. This assignment is the foremost step in the process of choosing the right career path for us. It will help us to dive-in and explore the world of IT. Moreover, it will make us think and question ourselves on 'Why me and IT?'</p>
+							<ul class="actions stacked">
+								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="pic1.jpeg" alt="" />
+						</div>
+					</section>
 
-				<!-- Five -->
+
+				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
