--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="pic1.jpeg" alt="" />
+							<img src="job.PNG" alt="" />
 						</div>
 					</section>
 
