--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Ideal Job</h1>
-							<p class="major">Click <a href="https://www.amazon.jobs/en/jobs/806630/software-development-manager?dclid=CjkKEQjwhPfkBRCHja-uzK3FopcBEiQAoFqAAzx0gZ4aUL3QUc6sIeA9AXJ-dvc2r9-X1_lRJHPGP7Dw_wcB&iis=Job+Posting&iisn=Indeed+%28Free+Posting%29&mode=job&utm_campaign=all_amazon&utm_content=organic&utm_medium=job_aggregator&utm_source=indeed.com">here</a> to viw the advertisement.</p>
+							<p class="major">Click <a href="https://www.amazon.jobs/en/jobs/806630/software-development-manager?dclid=CjkKEQjwhPfkBRCHja-uzK3FopcBEiQAoFqAAzx0gZ4aUL3QUc6sIeA9AXJ-dvc2r9-X1_lRJHPGP7Dw_wcB&iis=Job+Posting&iisn=Indeed+%28Free+Posting%29&mode=job&utm_campaign=all_amazon&utm_content=organic&utm_medium=job_aggregator&utm_source=indeed.com">here</a> to view the advertisement.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
 							</ul>
