--- a/index.html
+++ b/index.html
@@ -91,8 +91,39 @@
 	<!-- Five -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Ideal Job</h1>
+							<h2>Ideal Job</h2>
 							<p class="major">Click <a href="https://www.amazon.jobs/en/jobs/806630/software-development-manager?dclid=CjkKEQjwhPfkBRCHja-uzK3FopcBEiQAoFqAAzx0gZ4aUL3QUc6sIeA9AXJ-dvc2r9-X1_lRJHPGP7Dw_wcB&iis=Job+Posting&iisn=Indeed+%28Free+Posting%29&mode=job&utm_campaign=all_amazon&utm_content=organic&utm_medium=job_aggregator&utm_source=indeed.com">here</a> to view the advertisement.</p>
+							<ul class="actions stacked">
+								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="job.PNG" alt="" />
+						</div>
+					</section>
+					<!-- Six -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Personal Profile</h2>
+							<p>
+							<dl>
+								<dt><u>Why RMIT?</u></dt>
+								<dt><u>What do I expect to learn?</u></dt>
+							</dl>	
+							</p>
+							<ul class="actions stacked">
+								<li><a href="#" class="button">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="rmit.jpg" alt="" />
+						</div>
+					</section>
+<!-- Seven -->
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content">
+							<h2>Ideal Job</h2>
+							<p></p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
 							</ul>
@@ -103,7 +134,7 @@
 					</section>
 
 
-				<!-- Six -->
+				<!-- Eight -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Massa sed condimentum</h2>
