--- a/index.html
+++ b/index.html
@@ -108,10 +108,7 @@
 						<div class="content">
 							<h2>Personal Profile</h2>
 							<p>
-							<dl>
-								<dt><u>Why RMIT?</u></dt>
-								<dt><u>What do I expect to learn?</u></dt>
-							</dl>	
+							
 							</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -124,7 +121,7 @@
 <!-- Seven -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h2>Ideal Job</h2>
+							<h2>Project ideas</h2>
 							<p></p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
