--- a/index.html
+++ b/index.html
@@ -105,19 +105,12 @@
 						</div>
 					</section>
 					<!-- Six -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
+	<section class="wrapper style1 align-center">
+						<div class="inner">
 							<h2>Personal Profile</h2>
-							<p>
-							
-							</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
 						</div>
-						<div class="image">
-							<img src="rmit.jpg" alt="" />
-						</div>
+
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
@@ -156,7 +149,7 @@
 										</ul>
 									</div>
 								</article>
-						</div>
+		</div>
 					</section>
 <!-- Seven -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
