--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-save"></span>
+									<span class="icon style2 major fa-snowflake-o"></span>
 									<h3>Ipsum</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-bar-chart"></span>
+									<span class="icon style2 major fa-thumb-tack"></span>
 									<h3>Dolor</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
