--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
-									<h3>Lorem</h3>
+									<h3>The Myers-Briggs Type Indicator® (MBTI®)</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-snowflake-o"></span>
-									<h3>Ipsum</h3>
+									<h3>Learning Style</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-thumb-tack"></span>
-									<h3>Dolor</h3>
+									<h3>The Big Five Personality</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 							</div>
