--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
 									<h3>The Myers-Briggs Type Indicator® (MBTI®)</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>The purpose of this personality inventory is to make the theory of psychological types described by C. G. Jung understandable and useful in people's lives.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-snowflake-o"></span>
 									<h3>Learning Style</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>By asking a series of questions and then scoring the results, this inventory illustrates our dominant and secondary learning styles. </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-thumb-tack"></span>
 									<h3>The Big Five Personality</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<p>This assessment measures your scores on five major dimensions of personality: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism. </p>
 								</section>
 							</div>
 		</div>
