--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="job.PNG" alt="" />
+							<img src="work1.jpg" alt="" />
 						</div>
 					</section>
 
