--- a/index.html
+++ b/index.html
@@ -160,10 +160,8 @@
 									</a>
 									<div class="caption">
 										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
+										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultricesjhgg tcggbj gytghikfmccckkkkkkkkkkkjrfdv nkjjbb nbj jb n mbsednm vo  gchbmjbtrfh hgtrewedfghjll,jvttfkjlibhgbnv.</p>
+										
 									</div>
 								</article>
 								<article>
