--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
+										<h3>Result of <i>Myers-Briggs Type Indicator®</i> test</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultricesjhgg tcggbj gytghikfmccckkkkkkkkkkkjrfdv nkjjbb nbj jb n mbsednm vo  gchbmjbtrfh hgtrewedfghjll,jvttfkjlibhgbnv.</p>
 										
 									</div>
@@ -145,7 +145,7 @@
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
+										<h3>Result of <i> Learning Style</i> test</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -157,7 +157,7 @@
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
+										<h3>Result of <i> Big Five Personality </i> test</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
