--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Result of <i>Myers-Briggs Type Indicator®</i> test</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultricesjhgg tcggbj gytghikfmccckkkkkkkkkkkjrfdv nkjjbb nbj jb n mbsednm vo  gchbmjbtrfh hgtrewedfghjll,jvttfkjlibhgbnv.</p>
+										<h3>Result of <b>Myers-Briggs Type Indicator®</b> test</h3>
+										<p>Introversion + Intution + Thinking + Perceiving</p>
+										<p><i>This test reveals following characteristics about me: logical, conceptual, analytical, objective, detached, critical, ingenious, complex, intellectually curious, loves ideas, pursues understanding, questioning, adaptable, independent.</i></p>
 										
 									</div>
 								</article>
@@ -145,11 +146,15 @@
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Result of <i> Learning Style</i> test</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
+										<h3>Result of <i><b> Learning Style</b></i> test</h3>
+										<p>
+										<ul>
+											<li>Auditory: 30%</li>
+											<li>Visual: 55%</li>
+											<li>Tactile: 15%</li></p>
+										<p><i>I am a visual learner. I learn by reading or seeing pictures. I can picture what I am learning in my head and learn best by using methods that are primarily visual. As a visual learner, I am usually neat and clean and often find something to watch if I become bored. I may have difficulty with spoken directions and may be easily distracted by sounds. I am attracted to color and to spoken language (like stories) that is rich in imagery.</i></p>
 										</ul>
+										
 									</div>
 								</article>
 								<article>
@@ -157,8 +162,15 @@
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Result of <i> Big Five Personality </i> test</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Result of <i><b> Big Five Personality</b> </i> test</h3>
+										<p>
+										<ul>
+											<li>Openess: 96%</li>
+											<li>Conscientiousness: 75%</li>
+											<li>Extraversion: 56%</li>
+											<li>Agreeableness: 77%</li>
+											<li>Neuroticism: 35%</li></p>
+										</ul>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
