--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 											<li>Auditory: 30%</li>
 											<li>Visual: 55%</li>
 											<li>Tactile: 15%</li></p>
-										<p><i>I am a visual learner. I learn by reading or seeing pictures. I can picture what I am learning in my head and learn best by using methods that are primarily visual. As a visual learner, I am usually neat and clean and often find something to watch if I become bored. I may have difficulty with spoken directions and may be easily distracted by sounds. I am attracted to color and to spoken language (like stories) that is rich in imagery.</i></p>
+										<p><i>I am a visual learner. I can picture what I am learning in my head and learn best by using methods that are primarily visual. I may have difficulty with spoken directions and may be easily distracted by sounds. As a visual learner, I am attracted to color and to spoken language (like stories) that is rich in imagery.</i></p>
 										</ul>
 										
 									</div>
