--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 										<ul>
 											<li>Auditory: 30%</li>
 											<li>Visual: 55%</li>
-											<li>Tactile: 15%</li></p>
+											<li>Tactile: 15%</li>
 										<i>I am a visual learner. I can picture what I am learning in my head and learn best by using methods that are primarily visual. I may have difficulty with spoken directions. As a visual learner, I am attracted to color and to spoken language (like stories) that is rich in imagery.</i></p>
 										</ul>
 										
