--- a/index.html
+++ b/index.html
@@ -146,13 +146,12 @@
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Result of <i><b> Learning Style</b></i> test</h3>
+										<h3>Result of <b> Learning Style</b> test</h3>
 										<p>
-										<ul>
-											<li>Auditory: 30%</li>
+										<ul><li>Auditory: 30%</li>
 											<li>Visual: 55%</li>
 											<li>Tactile: 15%</li>
-										<i>I am a visual learner. I can picture what I am learning in my head and learn best by using methods that are primarily visual. I may have difficulty with spoken directions. As a visual learner, I am attracted to color and to spoken language (like stories) that is rich in imagery.</i></p>
+										<i>I am a visual learner. I can picture what I am learning in my head and learn best by using visual methods. I may have difficulty with spoken directions. As a visual learner, I am attracted to color and to spoken language (like stories) that is rich in imagery.</i></p>
 										</ul>
 										
 									</div>
@@ -162,7 +161,7 @@
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Result of <i><b> Big Five Personality</b> </i> test</h3>
+										<h3>Result of <b> Big Five Personality</b> test</h3>
 										<p>
 										<ul>
 											<li>Openess: 96%</li>
