--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 									<div class="caption">
 										<h3>Result of <b> Learning Style</b> test</h3>
 										<p>
-										<ul><li>Auditory: 30%</li>
+										<li>Auditory: 30%</li>
 											<li>Visual: 55%</li>
 											<li>Tactile: 15%</li>
 										<i>I am a visual learner. I can picture what I am learning in my head and learn best by using visual methods. I may have difficulty with spoken directions. As a visual learner, I am attracted to color and to spoken language (like stories) that is rich in imagery.</i></p>
-										</ul>
+										
 										
 									</div>
 								</article>
