--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 							<p>
 							<dl>
 								<dt><u>Why RMIT?</u></dt>
-								<dt><u>What do I expect to learn?</u></dt>
+								<dd>RMIT is internationally recognised for teaching and research excellence in information communication technology (ICT) with an emphasis on programming and software development.
+									Combining theory and project experience, an IT qualification from RMIT gives us the skills to develop IT infrastructures and support the people who use them - from network and data administration, programming and client support, to specialised skills to lead innovation in IT.
+									RMIT is ranked in the top 1 per cent of universities globally, with an international reputation for excellence in technology. Moreover, it is 21st in the world among universities less than 50 years old (2018–19 QS Top 50 Under 50 index), 95th globally for graduate employment (8th in Australia). RMIT has a 5-Star QS ranking for excellence in higher education. Over 50% of RMIT programs offer internships, placements and industry work experience at companies. RMIT comes under Australian Technology Network (ATN). Moreover, campuses are known for their award-winning, urban spaces and state-of-the-art facilities. It provides invaluable industry experience through collaborations, projects, internships and more. Also, RMIT provides work-integrated learning (WIL) and quality education.</p> 
+									
 							</dl>	
 							</p>
 						
