--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 							<p>
 							<dl>
 								<dt><u>What do I expect to learn?</u></dt>
-								<dd>IT is a dynamic and everlasting field, the more you get into it, the more you discover. I enjoy keeping up with the latest advances in the broad and ever-changing field of information technology. My main interest in IT is computer programming and web designing as both of them rely on creativity and problem-solving skills. IT gives me a pleasure to solve the problems in a creative manner.
-									My interest in computer began when my parents gifted me a personal computer on my 12th birthday. At that time, computer was just a toy and entertainment device for me. With the passage of time, my interest was directed towards its working and how it manages and tranfers huge data in a wireless medium in a matter of seconds. I have a best friend, named Varun, he belongs to electronics and communication field. He is a techie, and shares me almost every knowledge and updates me with the news in the field of technology. Being with him, he made me more aware about the world of technology. He has a great role in my life that sparked my interest. 
+								<dd>During my studies, I expect to learn 
 
 							</dl>	
 							</p>
@@ -110,7 +109,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="iit.jpg" alt="" />
+							<img src="learn.jpg" alt="" />
 						</div>
 					</section>
 	<!-- Five -->
