--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<img src="rmit.jpg" alt="" />
 						</div>
 					</section>
-<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							
 							<p>
