--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						</div>
 					</section>
 	<!-- Five -->
-					<section class="banner style1 orient-left content-align-left image-position-left fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Ideal Job</h2>
 							<p class="major">Click <a href="https://www.amazon.jobs/en/jobs/806630/software-development-manager?dclid=CjkKEQjwhPfkBRCHja-uzK3FopcBEiQAoFqAAzx0gZ4aUL3QUc6sIeA9AXJ-dvc2r9-X1_lRJHPGP7Dw_wcB&iis=Job+Posting&iisn=Indeed+%28Free+Posting%29&mode=job&utm_campaign=all_amazon&utm_content=organic&utm_medium=job_aggregator&utm_source=indeed.com">here</a> to view the advertisement.</p>
