--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<dt><u>What do I expect to learn?</u></dt>
 								<dd>During my studies, I expect to equip myself with the skills to make a living as I solve, support, troubleshoot and design, everything from web sites to applications to programming networks, in organisations ranging from business and government to schools, healthcare and more. On completing my graduation, I expect to come up with a good command of at east two programming languages, especially C++, Java and Python. Opting business and management as a minor subject, I would like to gain not only computer and programming skills but also that of business and management skills.
 									I expect to gain a combination of knowledge and practical expertise to influence an organisation’s technology infrastructure and the clients who use IT. As software and artificial intelligence has a great scope in future, so I would like to be trained myself in both of these fields with a knowledge of data security and cloud computing as well. Theoretical knowledge has no significance without its practical experince, therefore, I expect to broaden my skills and experience by working with industry.
-									
+									I would like to develop some apps during my studies and project work. Creating websites will give the opportunity to showcase my coding skills and creativity.
 							</dl>	
 							</p>
 							<ul class="actions stacked">
