--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 						<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Personal Profile</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<p>In today's world, employers use a number of online tests during recruitment process to get information about potential employees. Employers not only want their employees to have a good technical knowledge but want someone who could work effeciently with his/her team mates and eventually provide a productive outcome for their company.
+							I took some of these online tests and their results are given below: </p>
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
