--- a/index.html
+++ b/index.html
@@ -139,17 +139,17 @@
 								<section>
 									<span class="icon style2 major fa-diamond"></span>
 									<h3>The Myers-Briggs Type Indicator® (MBTI®)</h3>
-									<p>The purpose of this personality inventory is to make the theory of psychological types described by C. G. Jung understandable and useful in people's lives.</p>
+									<p><i>The purpose of this personality inventory is to make the theory of psychological types described by C. G. Jung understandable and useful in people's lives.</i></p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-snowflake-o"></span>
 									<h3>Learning Style</h3>
-									<p>By asking a series of questions and then scoring the results, this inventory illustrates our dominant and secondary learning styles. </p>
+									<p><i>By asking a series of questions and then scoring the results, this inventory illustrates our dominant and secondary learning styles.</i> </p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-thumb-tack"></span>
 									<h3>The Big Five Personality</h3>
-									<p>This assessment measures your scores on five major dimensions of personality: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism. </p>
+									<p><i>This assessment measures your scores on five major dimensions of personality: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism.<i></p>
 								</section>
 							</div>
 							<!-- Gallery -->
@@ -200,6 +200,9 @@
 								
 								
 							</div>
+							<p>The results of these tests will significantly help me to make use of my strenghts in a better way in future in every facet of life. It creates self-awareness of my potential. These results will help me to work on my weaknesses as well. These results will motivate me to work on my goal and will also gide me to correct my weaknesses.These tests are the means of self-assessment and self-evaluation.
+							</p>
+							<p>Considersing the results of above tests, I 
 					</section>
 <!-- Seven -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
