--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 								<section>
 									<span class="icon style2 major fa-thumb-tack"></span>
 									<h3>The Big Five Personality</h3>
-									<p><i>This assessment measures your scores on five major dimensions of personality: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism.<i></p>
+									<p><i>This assessment measures your scores on five major dimensions of personality: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism.</i></p>
 								</section>
 							</div>
 							<!-- Gallery -->
@@ -207,11 +207,7 @@
 							<p>When forming a team, I will try to have team mates who will nullify my weaknesses with their potential so that we could come up together with flying colours. Also, I will make sure that all of the teammates should share some or the other thoughts and ideas for mutual understanding and bond. Team must have people with different personalities as it helps to think outside our own limits, and this ultimately results a better outcome of a team.</p>
 							
 					</section>
-<!-- Seven --><section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Interest in IT</h2>
-	</div>
-</section>
+<!-- Seven -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Project ideas</h2>
