--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
 					<section class="banner style1 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Ideal Job</h2>
+							<p>Given at the right is a snapshot of a job advertisement which I consider to be my ideal job.</p>
 							<p class="major">Click <a href="https://www.amazon.jobs/en/jobs/806630/software-development-manager?dclid=CjkKEQjwhPfkBRCHja-uzK3FopcBEiQAoFqAAzx0gZ4aUL3QUc6sIeA9AXJ-dvc2r9-X1_lRJHPGP7Dw_wcB&iis=Job+Posting&iisn=Indeed+%28Free+Posting%29&mode=job&utm_campaign=all_amazon&utm_content=organic&utm_medium=job_aggregator&utm_source=indeed.com">here</a> to view the advertisement.</p>
+							<p>The provided advertisement is for the post of Software Development Manager in Amazon, a company that has been rated one of the most admired companies in the US in terms of innovation and customer service. This post is mostly about working on cloud computing and software development with a team. Working with this team of smart and passionate memebers will not only help me showcase my knowledge but also motivate me and provide more knowledge and experience n related field. This position is appealing to me because it requires both problem-solving and creative skills. Moreover, it is all about managing team and working on software. This position requires not only technical knowledge but leadership qualities and think I will be apt for this position on aquiring proper knowledge. With a good package of salary, this job will provide a positive and healhy atmosphere around me.</p> 
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
 							</ul>
