--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="ijob.PNG" alt="" />
+							<img src="11.jpg" alt="" />
 						</div>
 					</section>
 					<!-- Six -->
