--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<p>
 							<dl>
 								<dt><u>What and when?</u></dt>
-								<dd>IT is a dynamic and everlasting field, the more you get into it, the more you discover. I enjoy keeping up with the latest advances in the broad and ever-changing field of information technology. My main interest in IT is computer programming and web designing as both of them rely on creativity and problem-solving skills. IT gives me a pleasure to solve the problems in a creative manner.
+								<dd>IT is a dynamic and everlasting field, the more you get into it, the more you discover. I enjoy keeping up with the latest advances in the broad and ever-changing field of information technology. My main interest in IT is computer programming, app development and web designing as each of them rely on creativity and problem-solving skills. IT gives me a pleasure to solve the problems in a creative manner.
 									My interest in computer began when my parents gifted me a personal computer on my 12th birthday. At that time, computer was just a toy and entertainment device for me. With the passage of time, my interest was directed towards its working and how it manages and tranfers huge data in a wireless medium in a matter of seconds. I have a best friend, named Varun, he belongs to electronics and communication field. He is a techie, and shares me almost every knowledge and updates me with the news in the field of technology. Being with him, he made me more aware about the world of technology. He has a great role in my life that sparked my interest. 
 
 							</dl>	
@@ -118,15 +118,37 @@
 					<section class="banner style1 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Ideal Job</h2>
-							<p>Given at the right is a snapshot of a job advertisement which I consider to be my ideal job.</p>
+							<p>Given at the left is a snapshot of a job advertisement which I consider to be my ideal job.</p>
 							<p class="major">Click <a href="https://www.amazon.jobs/en/jobs/806630/software-development-manager?dclid=CjkKEQjwhPfkBRCHja-uzK3FopcBEiQAoFqAAzx0gZ4aUL3QUc6sIeA9AXJ-dvc2r9-X1_lRJHPGP7Dw_wcB&iis=Job+Posting&iisn=Indeed+%28Free+Posting%29&mode=job&utm_campaign=all_amazon&utm_content=organic&utm_medium=job_aggregator&utm_source=indeed.com">here</a> to view the advertisement.</p>
-							<p>The provided advertisement is for the post of Software Development Manager in Amazon, a company that has been rated one of the most admired companies in the US in terms of innovation and customer service. This post is mostly about working on cloud computing and software development with a team. Working with this team of smart and passionate memebers will not only help me showcase my knowledge but also motivate me and provide more knowledge and experience n related field. This position is appealing to me because it requires both problem-solving and creative skills. Moreover, it is all about managing team and working on software. This position requires not only technical knowledge but leadership qualities and think I will be apt for this position on aquiring proper knowledge. With a good package of salary, this job will provide a positive and healhy atmosphere around me.</p> 
+							<p>The provided advertisement is for the post of 'Software Development Manager' in Amazon, a company that has been rated one of the most admired companies in the US in terms of innovation and customer service. This post is mostly about working on cloud computing and software development with a team. Working with this team of smart and passionate memebers will not only help me showcase my knowledge but also motivate me and provide more knowledge and experience n related field. This position is appealing to me because it requires both problem-solving and creative skills. Moreover, it is all about managing team and working on software. This position requires not only technical knowledge but leadership qualities and think I will be apt for this position on aquiring proper knowledge. With a good package of salary, this job will provide a positive and healhy atmosphere around me.</p> 
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
 							</ul>
 						</div>
 						<div class="image">
 							<img src="11.jpg" alt="" />
+						</div>
+					</section>
+<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							
+							<p>
+							<dl>
+								<dt><u>Requirements of the position:</u></dt>
+								<dd></dd>
+								<dt><u>Current Skills, Qualifications and Experience:</u></dt>
+								<dd></dd>
+								<dt><u>Plan to achieve:</u></dt>
+								<dd></dd>
+
+							</dl>	
+							</p>
+							<ul class="actions stacked">
+								<li><a href="#" class="button">CONTINUE...</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="iit.jpg" alt="" />
 						</div>
 					</section>
 					<!-- Six -->
