--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="iit.jpg" alt="" />
+							<img src="team.jpg" alt="" />
 						</div>
 					</section>
 					<!-- Six -->
