--- a/index.html
+++ b/index.html
@@ -137,20 +137,19 @@
 								<dt><u>Requirements of the position:</u></dt>
 								<dd>
 								<ul>
-									<li>Bachelor's degree in Computer Science, Inforrmation Technology, or a related field plus five years of progressively responsible experience in the speciality as equivalent</li>
-									<li>A minimum of 5 years of experience managing a team of software development professionals within a distributed systems environment</li>
+									<li>Bachelor's degree in Computer Science, Inforrmation Technology, or a related field plus five years of experience in the speciality as equivalent</li>
+									<li>A minimum of 5 years of experience managing a team of software development professionals </li>
 									<li>Master's degree in Computer Science, IT, or a related field</li>
 									<li>Past experience in at leasst one of the following areas- Information Retrieval, Data Mining, Text Analysis or Machine Learning</li>
-									<li>Excellent verbal and written communication skills</li>
-									<li>Strong business and technical vision</li>
+									<li>Excellent verbal and written communication skills to explicitly deliver thoughts and ideas to colleagues </li>
+									<li>Strong business and technical vision for the growth of the company</li>
 									<li>Ability to handle multiple competing priorities in a fast-paced environment</li>
-									<li>A deep understanding of software development in a team, and a track record of shipping software with a focus on customer value</li>
-									<li>Meets/exceeds Amazon’s leadership principles requirements, Amazon’s functional/technical depth and complexity for this role</li>
+									<li>A deep understanding of software development in a team, customer value services</li>
+									<li>Meets/exceeds Amazon’s leadership principles requirements, Amazon’s functional/technical depth and complexity for the role</li>
 									</dd>
 								<dt><u>Current Skills, Qualifications and Experience:</u></dt>
-								<dd>Currently I am working on </dd>
-								<dt><u>Plan to achieve:</u></dt>
-								<dd></dd>
+								<dd>Currently I am pursuing Bachelors in Information Technology to gain knowledge on computer basics, it's working. I have good communiction and leadership skills. I can handle multiple tasks at a same time with time management techniques. I have basic knowledge on C Programming. </dd>
+								
 
 							</dl>	
 							</p>
