--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 							<p>
 							<dl>
 								<dt><u>Plan to achieve:</u></dt>
-								<dd></p> 
+								<dd>During my bacheor course, I will gain in-depth knowledge on software development. Learning some of the programming languages will prove to be helpful. Active participation in individual and group assignments will help me to gain practical knowledge. In last semester of my course, I will get the opportunity to work in a industry to gain some experience. Opting bussiness and management as a minor cousrse will help me to learn basic idea on how compant=y works and how to deal with the customers. In masters, I am planning to choose Business Management and afterwards work in a industry for more experience. Working as an intern soon after the course completion will help me to create a good career portfolio. As mnager's job is to work with a team, so with the passage of time I will try to build my leadership and communication skills. </p> 
 									
 							</dl>	
 							</p>
@@ -177,7 +177,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="rmit.jpg" alt="" />
+							<img src="plan.jpg" alt="" />
 						</div>
 					</section>
 					<!-- Six -->
