--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 							<p>
 							<dl>
 								<dt><u>Plan to achieve:</u></dt>
-								<dd>During my bachelor course, I will gain in-depth knowledge on software development. Learning some of the programming languages will prove to be helpful. Active participation in individual and group assignments will help me to gain practical knowledge. In last semester of my course, I will get the opportunity to work in a industry to gain some experience. Opting bussiness and management as a minor cousrse will help me to learn basic idea on how compant=y works and how to deal with the customers. In masters, I am planning to choose Business Management and afterwards work in a industry for more experience. Working as an intern soon after the course completion will help me to create a good career portfolio. As mnager's job is to work with a team, so with the passage of time I will try to build my leadership and communication skills. </p> 
+								<dd>During my bachelor course, I will gain in-depth knowledge of software development. Learning some of the programming languages will prove to be helpful. Active participation in individual and group assignments will help me to gain practical knowledge. In last semester of my course, I will get the opportunity to work in a industry to gain some experience. Opting bussiness and management as a minor cousrse will help me to learn basic idea on how compant=y works and how to deal with the customers. In masters, I am planning to choose Business Management and afterwards work in a industry for more experience. Working as an intern soon after the course completion will help me to create a good career portfolio. As mnager's job is to work with a team, so with the passage of time I will try to build my leadership and communication skills. </p> 
 									
 							</dl>	
 							</p>
@@ -264,7 +264,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h2>Project ideas</h2>
-							<p></p>
+							<p>After acquiring proper theoritical and practical knowledge, I would like to devolop a smartphone app that could help people to gain any knowledge or updates them on any topic in a matter or seconds using an artificial intelligeence software. Consumers just need to ask the app and app will answer their questions in seconds. Consumers can ask the app to search any data from web or update them with the current news or they can ask to set reminders, etc. The app could work as a virtual personal assistant  which will response only to it's  own consumer by detacting his/her voice commands. Thia assistant can engage in two-way conversation in any of the preferred language of the consumer. </p>
+							<p> In this fast-paced world of technology, 
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
 							</ul>
