--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="plan.jpg" alt="" />
+							<img src="tech.jpg" alt="" />
 						</div>
 					</section>
 
