--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 						<div class="content">
 							<h2>Project ideas</h2>
 							<p>After acquiring proper theoritical and practical knowledge, I would like to devolop a smartphone app that could help people to gain any knowledge or updates them on any topic in a matter or seconds using an artificial intelligeence software. Consumers just need to ask the app and app will answer their questions in seconds. Consumers can ask the app to search any data from web or update them with the current news or they can ask to set reminders, etc. The app could work as a virtual personal assistant  which will response only to it's  own consumer by detacting his/her voice commands. Thia assistant can engage in two-way conversation in any of the preferred language of the consumer. </p>
-							<p> In this fast-paced world of technology, 
+							<p> In this fast-paced world of technology, virtual personal assistants are having a huge monent. Statistics reveal that half of the UK workforce will want to work remotely by 2020. From the side of entrepreneur or business or any indivudual, who wouldn't want a totally-efficient, totally-affordable employee who self-manages from anywhere that doesn't cost a thing? Virtual assistant apps manage tasks at a lightening speed.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">CONTINUE...</a></li>
 							</ul>
