--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 							
 						</div>
 						<div class="image">
-							<img src="work1.jpg" alt="" />
+							<img src="22.jpg" alt="" />
 						</div>
 					</section>
 				
